# GladOs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.json  bot.py  deploy.sh  docker-compose.yml  exceptions.py  keyboards.py  main.py  pyproject.toml  requirements.txt  states.py  utils.py
.github/workflows/: deploy-prod.yml  docker-image.yml  release-and-deploy.yml  release-process.yml  tests.yml
.github/workflows/PULL_REQUEST_TEMPLATE/: release.md
tests/: conftest.py  fixtures.py  test.py  test_bot.py  test_coinflip.py  test_integration.py  test_main.py
utils/: admin.py  coinflip.py  home_helper.py  mobile_utils.py  notify_admins.py  redis_utils.py  weather.py
utils/db_api/: db_gino.py
