[tool.poetry]
name = "glados"
version = "0.1.0"
package-mode = false
description = "my personal rutine helper"
authors = ["Valien R. <34721834+rvalien@users.noreply.github.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.22.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = "^0.13.0"
